k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-microservice
  annotations: # <--  Add Prometheus annotations here
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/authorization/metrics'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-microservice
  template:
    metadata:
      labels:
        app: authorization-microservice
    spec:
      containers:
        - name: authorization-microservice
          image: 2741/authorization-microservice:latest
          ports:
            - containerPort: 8080
